--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ sourceCompatibility = 1.8
 gradlePlugin {
     plugins {
         simplePlugin {
-            id = 'com.github.mictaege.arete-gradle'
+            id = 'arete-gradle'
             implementationClass = 'com.github.mictaege.arete_gradle.AretePlugin'
         }
     }
