self-hosting fontawesome fonts

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'org.fusesource.jansi:jansi:2.3.2'
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.freemarker:freemarker:2.3.31'
+    implementation 'net.lingala.zip4j:zip4j:2.9.0'
 }
 
 task generateResources {
